# SVDB

./: README.md
svdb/: Dockerfile  README.md  docker-compose.yml  env.example  requirements.txt  run_integration_tests.sh  run_load_tests.sh  security_guidelines.md
svdb/.github/workflows/: ci-cd.yml
svdb/admin_tools/: ALERT_SETUP.md  alert_config.py  alerts-env.sample  dashboard.py  monitor.py  svdb_monitor.db  update_monitor.py
svdb/api/: app.py  requirements.txt
svdb/api/tests/: svdb_monitor.db  test_api.py
svdb/blockchain_bridge/: bridge.py  hsm.py  hsm_config.example.json  transaction_format.md
svdb/blockchain_bridge/tests/: test_bridge.py
svdb/docs/: api_documentation.md
svdb/integrations/: README.md  __init__.py  import_tool.py  requirements.txt  setup.py
svdb/integrations/cloud_adapters/: __init__.py  azure_adapter.py  do_adapter.py  gcp_adapter.py  s3_adapter.py
svdb/storage_engine/: Cargo.toml  README.md  pyproject.toml  requirements.txt  setup.py  test_svdb.py
svdb/storage_engine/python/svdb_core/: __init__.py  __main__.py  helpers.py
svdb/storage_engine/python/svdb_core/core/: __init__.py  utils.py
svdb/storage_engine/python/svdb_core/tests/: test_storage.py
svdb/storage_engine/src/: lib.rs  tests.rs
svdb/storage_engine/tests/: comprehensive_tests.py
svdb/tests/: generate_report.py  integration_test.py  load_test.py  load_test_results.json
svdb/verification/: verification.py
